--- a/package.json
+++ b/package.json
@@ -15,22 +15,21 @@
         "@next/bundle-analyzer": "^15.3.3",
         "framer-motion": "^12.9.7",
         "next": "15.3.1",
-        "prettier": "^3.5.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0"
     },
     "browserslist": {
         "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all",
-            "not IE 11"
+            "last 2 Chrome versions",
+            "last 2 Firefox versions",
+            "last 2 Safari versions",
+            "last 2 Edge versions"
         ],
         "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
+            "last 1 Chrome version",
+            "last 1 Firefox version",
+            "last 1 Safari version"
         ]
     },
     "devDependencies": {
@@ -42,6 +41,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^9",
         "eslint-config-next": "15.3.1",
+        "prettier": "^3.5.3",
         "tailwindcss": "^4",
         "typescript": "^5"
     }
