--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ name: Deploy Samsul Islam Portfolio site
 on:
     # Runs on pushes targeting the default branch
     push:
-        branches: ['master']
+        branches: ['gh-pages']
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
